# docassemble-AppealsEntryForm

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
docassemble/AppealsEntryForm/data/questions/: appeals_entry_form.yml
docassemble/AppealsEntryForm/data/templates/: appeals_entry_form.docx  appeals_entry_form_next_steps.docx
